changed controller, html mapping  and updated cascading to correct save issue
basic functionality achieved!